# actix-examples

database_interactions/sqlx_todo/: .env.example  Cargo.toml  README.md  schema.sql
database_interactions/sqlx_todo/src/: main.rs
database_interactions/sqlx_todo/src/todo/: model.rs  routes.rs
