[package]
name = "sqlx_todo"
version = "0.1.0"
authors = ["Milan Zivkovic <zivkovic.milan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.10", default_features = false }
serde = "1.0.130"
serde_json = "1.0.70"
sqlx = { version = "0.3", features = [ "mysql", "macros"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.14"
anyhow = "1.0.45"
futures = "0.3.17"
